Gerenciamento de Pessoas

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<encoding>UTF-8</encoding>
